force-app/main/default/objects/CareService__c/CareService__c.object-meta.xml
<CustomObject>
    <label>Care Service</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Care Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>