force-app/main/default/objects/CareService__c/fields/App_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>App_ExternalId__c</fullName>
    <label>App ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>