force-app/main/default/objects/CareService__c/fields/Appointment_today__c.field-meta.xml
<CustomField>
    <fullName>Appointment_today__c</fullName>
    <formula>DATEVALUE(Appointement_DateTime__c) =  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment today</label>
    <type>Checkbox</type>
</CustomField>