force-app/main/default/objects/CareService__c/fields/Assigned_To_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Current_User__c</fullName>
    <formula>Assigned_To__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Current User</label>
    <type>Checkbox</type>
</CustomField>