force-app/main/default/objects/CareService__c/fields/Attendace_filled__c.field-meta.xml
<CustomField>
    <fullName>Attendace_filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance filled</label>
    <type>Checkbox</type>
</CustomField>