force-app/main/default/objects/CareService__c/fields/CA__c.field-meta.xml
<CustomField>
    <fullName>CA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Care_Services</relationshipName>
    <type>Lookup</type>
</CustomField>