force-app/main/default/objects/CareService__c/fields/CA_Code__c.field-meta.xml
<CustomField>
    <fullName>CA_Code__c</fullName>
    <label>CA Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>