force-app/main/default/objects/CareService__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Cancelled by client</fullName>
            </value>
            <value>
                <fullName>Request Cancelled by Care Expert</fullName>
            </value>
            <value>
                <fullName>Preliminary Assessment declined</fullName>
            </value>
            <value>
                <fullName>Preliminary Assessment expired</fullName>
            </value>
            <value>
                <fullName>Product never shipped</fullName>
            </value>
            <value>
                <fullName>Cancelled automatically by system</fullName>
            </value>
            <value>
                <fullName>Request Cancelled by MyRepairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>