force-app/main/default/objects/CareService__c/fields/Care_Expert_Note__c.field-meta.xml
<CustomField>
    <fullName>Care_Expert_Note__c</fullName>
    <description>Note of Care Expert about Quotations</description>
    <inlineHelpText>Note of Care Expert about Quotations</inlineHelpText>
    <label>Care Expert&apos;s note</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>