force-app/main/default/objects/CareService__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&quot;MAR&quot;</defaultValue>
    <description>Category picklist for Demand on Product without Sku</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAR</fullName>
                <default>true</default>
                <label>MAR(Leather goods)</label>
            </value>
            <value>
                <fullName>ACC</fullName>
                <label>ACC (accessories)</label>
            </value>
            <value>
                <fullName>WAT</fullName>
                <label>WAT (Watch)</label>
            </value>
            <value>
                <fullName>RIG</fullName>
                <label>RIG (Rigide)</label>
            </value>
            <value>
                <fullName>BLT</fullName>
                <label>BLT (Belts)</label>
            </value>
            <value>
                <fullName>EYE</fullName>
                <label>EYE (eyeware)</label>
            </value>
            <value>
                <fullName>JWL</fullName>
                <label>JWL (Jewelry)</label>
            </value>
            <value>
                <fullName>KEY</fullName>
                <label>KEY (Keys)</label>
            </value>
            <value>
                <fullName>PEN</fullName>
                <label>PEN (pen)</label>
            </value>
            <value>
                <fullName>RTW</fullName>
                <label>RTW (ReadyToWear)</label>
            </value>
            <value>
                <fullName>SHO</fullName>
                <label>SHO (shoe)</label>
            </value>
            <value>
                <fullName>TEX</fullName>
                <label>TEX (textile)</label>
            </value>
            <value>
                <fullName>UMB</fullName>
                <label>UMB (umbrella)</label>
            </value>
            <value>
                <fullName>PET</fullName>
                <label>PET (small leather goods)</label>
            </value>
            <value>
                <fullName>Accessories</fullName>
                <isActive>false</isActive>
                <label>Accessories</label>
            </value>
            <value>
                <fullName>Find Jewellery</fullName>
                <isActive>false</isActive>
                <label>Find Jewellery</label>
            </value>
            <value>
                <fullName>Gifting</fullName>
                <isActive>false</isActive>
                <label>Gifting</label>
            </value>
            <value>
                <fullName>Leather Goods, Voyage</fullName>
                <isActive>false</isActive>
                <label>Leather Goods, Voyage</label>
            </value>
            <value>
                <fullName>Objets Nomades, Petits Nomades</fullName>
                <isActive>false</isActive>
                <label>Objets Nomades, Petits Nomades</label>
            </value>
            <value>
                <fullName>Perfumes</fullName>
                <isActive>false</isActive>
                <label>Perfumes</label>
            </value>
            <value>
                <fullName>Ready to wear (RTW)</fullName>
                <isActive>false</isActive>
                <label>Ready to wear (RTW)</label>
            </value>
            <value>
                <fullName>Shoes</fullName>
                <isActive>false</isActive>
                <label>Shoes</label>
            </value>
            <value>
                <fullName>Small Leather Goods</fullName>
                <isActive>false</isActive>
                <label>Small Leather Goods</label>
            </value>
            <value>
                <fullName>Watches</fullName>
                <isActive>false</isActive>
                <label>Watches</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>