force-app/main/default/objects/CareService__c/fields/Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>Client_Comments__c</fullName>
    <label>Client Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>