force-app/main/default/objects/CareService__c/fields/Closed_after_Clone__c.field-meta.xml
<CustomField>
    <fullName>Closed_after_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NI-2646 
This field will be set to true when the care service is cancelled by cloning</description>
    <label>Closed after Clone</label>
    <type>Checkbox</type>
</CustomField>