force-app/main/default/objects/CareService__c/fields/Code_Flag__c.field-meta.xml
<CustomField>
    <fullName>Code_Flag__c</fullName>
    <formula>IMAGE( 
IF( Red_Code__c = True, &quot;/img/samples/flag_red.gif&quot;, 
IF( Yellow_Code__c = True, &quot;/img/samples/flag_yellow.gif&quot;, &quot;/s.gif&quot;)), 
&quot;Code Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Flag</label>
    <type>Text</type>
</CustomField>