force-app/main/default/objects/CareService__c/fields/Confirm_Address_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Address_Expiration_Date__c</fullName>
    <formula>Confirm_Address_Send_Date__c + 2</formula>
    <label>Confirm Address Expiration Date</label>
    <type>DateTime</type>
</CustomField>