force-app/main/default/objects/CareService__c/fields/Confirm_Address_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Address_Send_Date__c</fullName>
    <label>Confirm Address Send Date</label>
    <type>DateTime</type>
</CustomField>