force-app/main/default/objects/CareService__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Date/Time Opened</label>
    <type>Date</type>
</CustomField>