force-app/main/default/objects/CareService__c/fields/Current_Status_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Age__c</fullName>
    <formula>TODAY()- Last_ICONiCS_Status_Changed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>