force-app/main/default/objects/CareService__c/fields/Dangerous_Product__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dangerous Product</label>
    <type>Checkbox</type>
</CustomField>