force-app/main/default/objects/CareService__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Estimated end of repair</label>
    <type>Date</type>
</CustomField>