force-app/main/default/objects/CareService__c/fields/Delivery_Store_Retail_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Store_Retail_Code__c</fullName>
    <label>Delivery Store Retail Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>