force-app/main/default/objects/CareService__c/fields/destination__c.field-meta.xml
<CustomField>
    <fullName>destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TechStoreRetailCode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>156RASS</fullName>
                <label>After Sales Center Ontario</label>
            </value>
            <value>
                <fullName>156RAS2</fullName>
                <label>After Sales Center Piscataway</label>
            </value>
            <value>
                <fullName>156RAS3</fullName>
                <label>After Sales Center Legacy 1854</label>
            </value>
            <value>
                <fullName>101RASS</fullName>
                <label>After Sales Center Cergy</label>
            </value>
            <value>
                <fullName>F92HUB</fullName>
                <label>UK Local Repair Center</label>
            </value>
            <value>
                <fullName>179RASS</fullName>
                <label>After Sales Center Shanghai</label>
            </value>
            <value>
                <fullName>172RASS</fullName>
                <label>After Sales Center Singapore</label>
            </value>
            <value>
                <fullName>L48HUB</fullName>
                <label>AU Local Repair Center</label>
            </value>
            <value>
                <fullName>186RASS</fullName>
                <label>After Sales Center Seoul</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>