force-app/main/default/objects/CareService__c/fields/Destination_filled__c.field-meta.xml
<CustomField>
    <fullName>Destination_filled__c</fullName>
    <formula>IF(ISPICKVAL(destination__c , &quot;&quot;), false, true)</formula>
    <label>Destination filled</label>
    <type>Checkbox</type>
</CustomField>