force-app/main/default/objects/CareService__c/fields/Display_ToManagerOnly__c.field-meta.xml
<CustomField>
    <fullName>Display_ToManagerOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display To Manager Only</label>
    <type>Checkbox</type>
</CustomField>