force-app/main/default/objects/CareService__c/fields/Followup_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Comment_Date__c</fullName>
    <label>Follow up comment date</label>
    <type>Date</type>
</CustomField>