force-app/main/default/objects/CareService__c/fields/Followup_Comments__c.field-meta.xml
<CustomField>
    <fullName>Followup_Comments__c</fullName>
    <label>MyRepair Follow up Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>