force-app/main/default/objects/CareService__c/fields/FollowupBy_Call__c.field-meta.xml
<CustomField>
    <fullName>FollowupBy_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup By Call</label>
    <type>Checkbox</type>
</CustomField>