force-app/main/default/objects/CareService__c/fields/FollowupBy_Chat__c.field-meta.xml
<CustomField>
    <fullName>FollowupBy_Chat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup By SMS/ChatApps</label>
    <type>Checkbox</type>
</CustomField>