force-app/main/default/objects/CareService__c/fields/FollowupBy_Email__c.field-meta.xml
<CustomField>
    <fullName>FollowupBy_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup By Email</label>
    <type>Checkbox</type>
</CustomField>