force-app/main/default/objects/CareService__c/fields/Has_Care_Expert_Note__c.field-meta.xml
<CustomField>
    <fullName>Has_Care_Expert_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Care Expert Note</label>
    <type>Checkbox</type>
</CustomField>