force-app/main/default/objects/CareService__c/fields/Has_Unread_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Unread_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Unread Email</label>
    <type>Checkbox</type>
</CustomField>