force-app/main/default/objects/CareService__c/fields/Has_Unread_Email_Parent__c.field-meta.xml
<CustomField>
    <fullName>Has_Unread_Email_Parent__c</fullName>
    <formula>Parent_Request__r.TECH_NewEmailReceived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Unread Email Parent</label>
    <type>Checkbox</type>
</CustomField>