force-app/main/default/objects/CareService__c/fields/Hide_Item_in_ICON__c.field-meta.xml
<CustomField>
    <fullName>Hide_Item_in_ICON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Item in ICON(deprecated)</label>
    <type>Checkbox</type>
</CustomField>