force-app/main/default/objects/CareService__c/fields/Hot_Status__c.field-meta.xml
<CustomField>
    <fullName>Hot_Status__c</fullName>
    <label>Hot Status(deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>