force-app/main/default/objects/CareService__c/fields/ICONiCS_Status__c.field-meta.xml
<CustomField>
    <fullName>ICONiCS_Status__c</fullName>
    <label>ICONiCS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New &amp; Preliminary assesment</fullName>
                <default>true</default>
                <label>New &amp; Preliminary assesment</label>
            </value>
            <value>
                <fullName>Validation &amp; Shipping</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>