force-app/main/default/objects/CareService__c/fields/ICONiCS_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>ICONiCS_Status_Detail__c</fullName>
    <defaultValue>&quot;New Request&quot;</defaultValue>
    <label>ICONiCS Detail Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
                <default>true</default>
                <label>New Request</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Pending Customer information</fullName>
            </value>
            <value>
                <fullName>Initiated in MyRepairs as a Draft</fullName>
            </value>
            <value>
                <fullName>Created in MyRepairs</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Preliminary Quote Pending Validation</fullName>
            </value>
            <value>
                <fullName>Preliminary Quote Validated</fullName>
            </value>
            <value>
                <fullName>Preliminary Quote Declined</fullName>
            </value>
            <value>
                <fullName>Spare parts order preparation</fullName>
            </value>
            <value>
                <fullName>Shipped to Repair Center</fullName>
            </value>
            <value>
                <fullName>Received in Repair Center</fullName>
            </value>
            <value>
                <fullName>Order pending validation</fullName>
            </value>
            <value>
                <fullName>Order rejected</fullName>
            </value>
            <value>
                <fullName>Order accepted</fullName>
            </value>
            <value>
                <fullName>Waiting for Spare parts</fullName>
            </value>
            <value>
                <fullName>Repair in progress</fullName>
            </value>
            <value>
                <fullName>Repair finalized</fullName>
            </value>
            <value>
                <fullName>Confirm Address</fullName>
            </value>
            <value>
                <fullName>Waiting for Payment</fullName>
            </value>
            <value>
                <fullName>Payment Confirmed</fullName>
            </value>
            <value>
                <fullName>Shipped to Client</fullName>
            </value>
            <value>
                <fullName>Received In E-Hub</fullName>
            </value>
            <value>
                <fullName>Delivered to Client</fullName>
            </value>
            <value>
                <fullName>Product stocked</fullName>
            </value>
            <value>
                <fullName>Payment Initiated</fullName>
            </value>
            <value>
                <fullName>Payment Review</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Shipped from E-Hub</fullName>
            </value>
            <value>
                <fullName>Payment Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>