force-app/main/default/objects/CareService__c/fields/In_Store_Action__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Action__c</fullName>
    <label>In Store Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Contacted</fullName>
            </value>
            <value>
                <fullName>Quotation validated in My Repair</fullName>
            </value>
            <value>
                <fullName>Quotation rejected in My Repair</fullName>
            </value>
            <value>
                <fullName>Client contacted &amp; Product sent to client</fullName>
            </value>
            <value>
                <fullName>Client not available – message left</fullName>
            </value>
            <value>
                <fullName>No action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>