force-app/main/default/objects/CareService__c/fields/Is_Generic_SKU__c.field-meta.xml
<CustomField>
    <fullName>Is_Generic_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Generic SKU</label>
    <type>Checkbox</type>
</CustomField>