force-app/main/default/objects/CareService__c/fields/Is_Hot__c.field-meta.xml
<CustomField>
    <fullName>Is_Hot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hot(deprecated)</label>
    <type>Checkbox</type>
</CustomField>