force-app/main/default/objects/CareService__c/fields/Is_Integrated_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Integrated_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Integrated Payment</label>
    <type>Checkbox</type>
</CustomField>