force-app/main/default/objects/CareService__c/fields/Is_Not_Repaired__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Repaired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Repaired</label>
    <type>Checkbox</type>
</CustomField>