force-app/main/default/objects/CareService__c/fields/IsAutoCancelled__c.field-meta.xml
<CustomField>
    <fullName>IsAutoCancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Cancelled</label>
    <type>Checkbox</type>
</CustomField>