force-app/main/default/objects/CareService__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <description>[Denodo] Check if a care service is closed</description>
    <formula>IF (
  CASE (MyRepairStatus__c,
				&apos;cancelled&apos;, &quot;true&quot;,
				&apos;sentToRMS&apos;, &quot;true&quot;,
				&apos;productDeliveredToClient&apos;, &quot;true&quot;,
				&quot;false&quot;
  ) = &quot;true&quot;,
		true,
  false
)</formula>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>