force-app/main/default/objects/CareService__c/fields/IsToDo__c.field-meta.xml
<CustomField>
    <fullName>IsToDo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is To Do</label>
    <type>Checkbox</type>
</CustomField>