force-app/main/default/objects/CareService__c/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <defaultValue>IF ($RecordType.DeveloperName = &quot;DistantCareService&quot;, &quot;en_US&quot;, null)</defaultValue>
    <label>LanguageLocaleKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>