force-app/main/default/objects/CareService__c/fields/Last_FollowUpStatus_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_FollowUpStatus_Changed_Date__c</fullName>
    <label>Last FollowUpStatus Changed Date</label>
    <type>Date</type>
</CustomField>