force-app/main/default/objects/CareService__c/fields/Last_ICONiCS_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ICONiCS_Status_Changed_Date__c</fullName>
    <description>Last Change Date of INCONiCS status detail</description>
    <label>Last ICONiCS Status Changed Date</label>
    <type>Date</type>
</CustomField>