force-app/main/default/objects/CareService__c/fields/Last_Metapack_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Metapack_Status_Changed_Date__c</fullName>
    <label>Last Metapack Status Changed Date</label>
    <type>Date</type>
</CustomField>