force-app/main/default/objects/CareService__c/fields/Last_MYLV_Care_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_MYLV_Care_Status_Changed_Date__c</fullName>
    <label>Last MYLV Care Status Changed Date</label>
    <type>Date</type>
</CustomField>