force-app/main/default/objects/CareService__c/fields/Last_MyRepair_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_MyRepair_Status_Changed_Date__c</fullName>
    <label>Last MyRepair Status Changed Date</label>
    <type>Date</type>
</CustomField>