force-app/main/default/objects/CareService__c/fields/LastMyRepairStatusModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastMyRepairStatusModifiedDate__c</fullName>
    <label>Last MyRepair Status Modified Date(depre</label>
    <type>DateTime</type>
</CustomField>