force-app/main/default/objects/CareService__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead time(weeks)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>