force-app/main/default/objects/CareService__c/fields/MessageToCA__c.field-meta.xml
<CustomField>
    <fullName>MessageToCA__c</fullName>
    <label>Message To CA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quotation to validate</fullName>
            </value>
            <value>
                <fullName>EXTRA DELAY</fullName>
            </value>
            <value>
                <fullName>Product ready in store (7 days)</fullName>
            </value>
            <value>
                <fullName>Product ready in store (28 days)</fullName>
                <label>Product ready in store (1 month)</label>
            </value>
            <value>
                <fullName>Product ready in store (3 months)</fullName>
            </value>
            <value>
                <fullName>Product available in store</fullName>
            </value>
            <value>
                <fullName>Shipped to store but NOT REPAIRED</fullName>
            </value>
            <value>
                <fullName>Shipped to store but NOT REPAIRED</fullName>
                <isActive>false</isActive>
                <label>Shipped to store but NOT REPAIRED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>