force-app/main/default/objects/CareService__c/fields/Metapack_Error__c.field-meta.xml
<CustomField>
    <fullName>Metapack_Error__c</fullName>
    <label>Metapack Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>