force-app/main/default/objects/CareService__c/fields/Metapack_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Metapack_Request_Body__c</fullName>
    <label>Metapack Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>