force-app/main/default/objects/CareService__c/fields/Metapack_Status__c.field-meta.xml
<CustomField>
    <fullName>Metapack_Status__c</fullName>
    <label>Metapack Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrier Pickup</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>